--- a/registrations/templates/pages/login.html
+++ b/registrations/templates/pages/login.html
@@ -9,7 +9,11 @@
     <button type="button" class="btn-close bg-dark" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
-    <form action="." method="post" class='card border-dark p-4'>
+    <a href="/cadastros/">Home page</a>
+  </div>
+</div>
+
+<form action="." method="post" class='card border-dark p-4'>
     <div class="grid text-center">
         <div class="g-col-4">
             <div class="input-group mb-3">
@@ -42,7 +46,5 @@
         </div>
     </div>
 </form>
-  </div>
-</div>
 
 {% endblock content %}
